更新依赖文件

--- a/MacOS/wb_profile/webroot/default/sample/index.htm
+++ b/MacOS/wb_profile/webroot/default/sample/index.htm
@@ -34,9 +34,9 @@
     <div>&nbsp;</div>
     <div>
         管理工具:
-        <a href="/dber.php?server=127.0.0.1" target="_blank">MySQL 管理</a> |
+        <a href="/mysql.php?server=127.0.0.1" target="_blank">MySQL 管理</a> |
         <a href="/status/nginx" target="_blank">Nginx 状态</a> |
-        <a href="/status-php.htm" target="_blank">PHP-FPM 监控</a> |
+        <a href="/info-fpm.htm" target="_blank">PHP-FPM 状态</a> |
         <a href="/info.php" target="_blank">PHP-INFO 信息</a>
     </div>
 </div>
