--- a/MacOS/wb_profile/webroot/default/sample/index.htm
+++ b/MacOS/wb_profile/webroot/default/sample/index.htm
@@ -16,7 +16,7 @@
 <body>
 <div class="wrap">
     <div>
-        <h2>WeBox Server <em>for MacOSX</em></h2>
+        <h2>WeBox Server <em>for MacOS</em></h2>
     </div>
     <div>&nbsp;</div>
     <div>
