更改编译环境为Debian系统，将下载命令分离wb_find模块

--- a/builder/wb_profile/Debian/webroot/default/sample/index.htm
+++ b/builder/wb_profile/Debian/webroot/default/sample/index.htm
@@ -16,7 +16,7 @@
 <body>
 <div class="wrap">
     <div>
-        <h2>WeBox Server <em>for Ubuntu</em></h2>
+        <h2>WeBox Server <em>for Debian</em></h2>
     </div>
     <div>&nbsp;</div>
     <div>
