修复变量模板

--- a/builder/profile/MacOS/htdoc/default/not/index.html
+++ b/builder/profile/MacOS/htdoc/default/not/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h2>WeBox Server <em>for MacOS</em></h2>
+    <h2>WeBox Server <em>for Debian</em></h2>
     <div>
         项目网址:
         <a href="http://www.anrip.com/webox" target="_blank">http://www.anrip.com/webox</a>
